<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    android:padding="25dp">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="20dp"
        app:cardCornerRadius="50dp"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="15dp"
                android:text="@string/qr_code_generator"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_input"
                    android:hint="@string/enter_text_to_generate_qr_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:hint="Special Characters (., #, $, [, ], /) will be removed before generating QR Code."/>

            <ImageView
                android:id="@+id/image_view_qr_code"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:padding="8dp"
                android:background="@drawable/design_search_view_background"
                android:contentDescription="@string/generated_qr_code" />
            <Button
                android:id="@+id/button_generate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generate_qr_code"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp" />

            <Button
                android:id="@+id/button_save_qr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_qr_code"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>