<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".AddFragment">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        android:layout_marginRight="25dp"
        android:padding="10dp"
        app:cardCornerRadius="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:text="@string/add_item"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_name"
                    android:hint="@string/component_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="Special Characters (., #, $, [, ], /) will be removed before saving Component Name."
                android:textAlignment="center"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/quantity_increase_decrease"
                android:textSize="22sp"
                />

            <LinearLayout
                android:id="@+id/constraint_inner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/minus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="5dp"
                    android:src="@drawable/image_minus_symbol"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <EditText
                    android:id="@+id/numbers"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:text="@string/_0"
                    android:textSize="24sp"
                    android:layout_marginStart="24dp"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    android:background="@drawable/design_text_box"
                    app:layout_constraintTop_toTopOf="@+id/imgMinus"
                    app:layout_constraintBottom_toBottomOf="@id/imgMinus"
                    app:layout_constraintStart_toEndOf="@+id/imgMinus"/>

                <ImageView
                    android:id="@+id/plus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="24dp"
                    android:src="@drawable/image_add_symbol"
                    android:padding="5dp"
                    app:layout_constraintStart_toEndOf="@+id/txtNumbers"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/qr_code_number"
                android:textSize="22sp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/qrCodeNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=""
                android:hint="@string/scan_qr_code_to_link_to_item"
                android:textSize="18sp"
                android:textAlignment="center"/>
            <Button
                android:id="@+id/scan_qr_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/scan_qr"/>
            <Button
                android:id="@+id/save_button"
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"/>
        </LinearLayout>



    </androidx.cardview.widget.CardView>




</RelativeLayout>