<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/backgroundColor">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:cardCornerRadius="50dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/edit_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/component_name"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:textSize="18sp"
                android:text="Quantity"/>
            <TextView
                android:id="@+id/initial_quantity"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:text="@string/_0"
                android:textSize="24sp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:background="@drawable/design_text_box" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/quantity_increase_decrease"
                android:textSize="18sp" />
            <LinearLayout
                android:id="@+id/constraint_inner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/edit_minus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="5dp"
                android:src="@drawable/image_minus_symbol"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/edit_item_count"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:text="@string/_0"
                android:textSize="24sp"
                android:layout_marginStart="24dp"
                android:textAlignment="center"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:background="@drawable/design_text_box"
                app:layout_constraintTop_toTopOf="@+id/imgMinus"
                app:layout_constraintBottom_toBottomOf="@id/imgMinus"
                app:layout_constraintStart_toEndOf="@+id/imgMinus"/>

            <ImageView
                android:id="@+id/edit_plus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="24dp"
                android:src="@drawable/image_add_symbol"
                android:padding="5dp"
                app:layout_constraintStart_toEndOf="@+id/txtNumbers"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:textSize="18sp"
                android:text="New Quantity"/>
            <TextView
                android:id="@+id/new_quantity"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:text="@string/_0"
                android:textSize="24sp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:background="@drawable/design_text_box" />
    <Button
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:text="Update" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>